# near-crowdfunding-dapp

./: .env  .gitignore  demoCampaign.json  index.html  package-lock.json  package.json  src.43859486.js  src.43859486.js.map  src.63f39ad9.js  src.63f39ad9.js.map  vite.config.js
contract/: .gitignore  README.md
contract/Crowdfunding/: .gitignore  Cargo.toml  README.md
contract/Crowdfunding/src/: lib.rs
src/: App.css  App.jsx  config.js
src/components/: Card.jsx  CardList.jsx  Completed.jsx  Create.jsx  Explore.jsx  Home.jsx  Navbar.jsx
src/pages/: Index.jsx
src/styles/: app.module.css
src/wallets/: near.js
